test/files/pos/t5245.scala
object Foo {
  def bar = { var x = (); def foo() = x }
}