test/files/neg/macro-argtype-mismatch/Macros_1.scala
object Macros {
  def macro foo(x: Int) = x
}